--- a/package.json
+++ b/package.json
@@ -5,4 +5,10 @@
     "swiper": "^11.2.6",
     "vite": "^6.3.3"
   }
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "build:dev": "vite build --mode development",
+  "preview": "vite preview"
+}
 }
