--- a/bitrader-react/package.json
+++ b/bitrader-react/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "copy-assets": "node copy-assets.js",
-    "prebuild": "npm run copy-assets"
+    "prebuild": "npm run copy-assets",
     "dev": "vite",
     "build:vite": "vite build",
     "build:dev": "vite build --mode development",
