--- a/bitrader-react/package.json
+++ b/bitrader-react/package.json
@@ -9,25 +9,20 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "jquery": "^3.7.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.0",
     "sass": "^1.87.0",
     "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "copy-assets": "node copy-assets.js",
-  "prebuild": "npm run copy-assets",
-  "dev": "vite",
-  "build:vite": "vite build",
-  "build:dev": "vite build --mode development",
-  "preview": "vite preview"
-},
+    "start": "vite",
+    "build": "vite build",
+    "build:dev": "vite build --mode development",
+    "preview": "vite preview"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -47,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.2.2"
   }
 }
