--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
+
 {
-  "dependencies": {
-    "@vitejs/plugin-react": "^4.4.1",
-    "aos": "^2.3.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.2",
-    "swiper": "^11.2.6",
-    "vite": "^6.3.3"
-  },
+  "name": "bitrader",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "aos": "^2.3.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "lovable-tagger": "^0.5.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.2.0"
   }
 }
