--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@vitejs/plugin-react": "^4.4.1",
     "aos": "^2.3.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.2",
     "swiper": "^11.2.6",
     "vite": "^6.3.3"
   },
   "scripts": {
-    "dev": "vite --host 0.0.0.0 --port 5173 --strictPort",
+    "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "preview": "vite preview"
